# constellations

./: .gitignore  Dockerfile  enter.sh  pyproject.toml  requirements.txt
src/constellations/: __init__.py  __main__.py
src/constellations/compositions/signal_bloom/: impl.py  impl.txt  main.py  statement.txt  utils.py
src/constellations/compositions/twisted_obelisk/: impl.py
src/constellations/geometry/: core.py  rectangle.py
src/constellations/interpreters/: interpreter.py  svg.py
src/constellations/lsystems/: tree_topology.py
src/constellations/morphisms/: bezier.py  boundingbox.py  disk.py  fit.py  matrix.py  perlin.py  rotations.py  sphere.py  switches.py  translate.py
src/constellations/morphisms/partitionby/: core.py  line.py  plane.py
src/constellations/paper/: core.py
src/constellations/parsers/: tree_topology.py
src/constellations/realizations/primitives/: rectangle.py  segment.py  square.py
