[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constellations"
version = "0.1.0"
description = "Generative art through composition."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "typeclass-core==1.0.3",
]

authors = [
  { name = "Jacob Vartuli-Schonberg" }
]

[project.urls]
Homepage = "https://github.com/OpenJ92/constellations"
Repository = "https://github.com/OpenJ92/constellations"
Issues = "https://github.com/OpenJ92/constellations/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
